--- a/assets/css/project-style.css
+++ b/assets/css/project-style.css
@@ -264,7 +264,7 @@ section {
 }
 
 .portfolio-details .portfolio-description {
-  padding-top: 30px;
+  padding: 30px;
 }
 
 .portfolio-details .portfolio-description h2 {
